--- a/music.html
+++ b/music.html
@@ -259,7 +259,7 @@
             }, {
                 name: "Mantoiyat",
                 singer: "Raftaar x Nawazuddin Siddiqui",
-                path: "https://mp3.vlcmusic.com/download.php?track_id=14448&format=320",
+                path: "http://vtf9.nixcdn.com/d1630a4d336d668bc4fa4da9a332266a/61e6667e/NhacCuaTui992/YeuNhuNgayYeuCuoi-QuangDung-6150740.mp3",
                 image: "https://a10.gaanacdn.com/images/song/39/24225939/crop_480x480_1536749130.jpg"
             }, {
                 name: "Aage Chal",
