--- a/music.html
+++ b/music.html
@@ -257,10 +257,10 @@
                 path: "https://mp3.filmysongs.in/download.php?id=Naachne Ka Shaunq Raftaar Ft Brodha V Mp3 Hindi Song Filmysongs.co.mp3",
                 image: "https://i.ytimg.com/vi/QvswgfLDuPg/maxresdefault.jpg"
             }, {
-                name: "Mantoiyat",
-                singer: "Raftaar x Nawazuddin Siddiqui",
+                name: "Yêu như ngày yêu cuối",
+                singer: "Quang Dũng",
                 path: "http://vtf9.nixcdn.com/d1630a4d336d668bc4fa4da9a332266a/61e6667e/NhacCuaTui992/YeuNhuNgayYeuCuoi-QuangDung-6150740.mp3",
-                image: "https://a10.gaanacdn.com/images/song/39/24225939/crop_480x480_1536749130.jpg"
+                image: "http://avatar.nct.nixcdn.com/song/2019/11/29/d/1/c/d/1575015668410_300.jpg"
             }, {
                 name: "Aage Chal",
                 singer: "Raftaar",
