--- a/music.html
+++ b/music.html
@@ -276,7 +276,7 @@
                 };
 
                 // Lắng nghe hành vi click vào playlist
-                // Listen to playlist clicks.
+                // Listen to playlist clicks
                 playlist.onclick = function(e) {
                     const songNode = e.target.closest(".song:not(.active)");
 
