--- a/music.html
+++ b/music.html
@@ -357,7 +357,7 @@
                 this.render();
 
                 // Hiển thị trạng thái ban đầu của button repeat & random
-                // Display the initial state of the repeat & random button
+                // Display the initial state of the repeat & random button..
                 randomBtn.classList.toggle("active", this.isRandom);
                 repeatBtn.classList.toggle("active", this.isRepeat);
             }
