--- a/id.html
+++ b/id.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tour</title>
-    <link rel="stylesheet" type="text/css" href="id.css">
-    <link rel="stylesheet" href="/html/font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" type="text/css" href="./id.css">
+    <link rel="stylesheet" href="./font/themify-icons/themify-icons.css">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
                     <div class="grid__row">
                         <div class="grid__column-4">
                             <div class="container-menu-items">
-                                <img src="/html/font/slider/travel.png" alt="" class="container-menu-items-1">
+                                <img src="./font/slider/travel.png" alt="" class="container-menu-items-1">
 
                             </div>
                             <span class="container-menu-last">SEARCH</span>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="grid__column-6 ">
                             <div class="grid__colum-img">
-                                <img src="/html/font/slider/Screenshot (89).png" alt="" class="grid__colum-image">
+                                <img src="./font/slider/Screenshot (89).png" alt="" class="grid__colum-image">
                             </div>
                             <div class="luck">
                                 LUXURY
@@ -115,7 +115,7 @@
                 <div class="grid__row">
                     <div class="grid__column-3">
                         <div class="grid__top">
-                            <img src="/html/font/slider/dthuyen.jpg" alt="" class="form-image">
+                            <img src="./font/slider/dthuyen.jpg" alt="" class="form-image">
                             <a href="#" class="grid__column-3-form">
                                 <div class="total-container-1">
                                     <div class="grid__colum-for-1">
@@ -158,7 +158,7 @@
                     </div>
                     <div class="grid__column-3">
                         <div class="grid__top">
-                            <img src="/html/font/slider/thuyen2.jpg" alt="" class="form-image">
+                            <img src="./font/slider/thuyen2.jpg" alt="" class="form-image">
                             <a href="#" class="grid__column-3-form">
                                 <div class="total-container-1">
                                     <div class="grid__colum-for-1">
@@ -202,7 +202,7 @@
                     </div>
                     <div class="grid__column-3">
                         <div class="grid__top">
-                            <img src="/html/font/slider/thuyen3.jpg" alt="" class="form-image">
+                            <img src="./font/slider/thuyen3.jpg" alt="" class="form-image">
                             <a href="#" class="grid__column-3-form">
                                 <div class="total-container-1">
                                     <div class="grid__colum-for-1">
@@ -249,28 +249,28 @@
         </div>
         <div class="footer-endl">
             <div class="footer-endl-list">
-                <img src="/html/font/slider/thuyendoi.jpg" alt="" class="footer-endl-img">
+                <img src="./font/slider/thuyendoi.jpg" alt="" class="footer-endl-img">
             </div>
             <div class="content-list">
                 <div class="gridss">
                     <div class="grid__row">
                         <div class="grid__column-5">
                             <a href="" class="image__string">
-                                <img src="/html/font/slider/i1.jpg" alt="" class="image__string-icons">
+                                <img src="./font/slider/i1.jpg" alt="" class="image__string-icons">
                                 <!-- <div href="" class="string-but">700$</div> -->
                             </a>
                             <div href="" class="string-but">700$</div>
                         </div>
                         <div class="grid__column-5">
                             <a href="" class="image__string">
-                                <img src="/html/font/slider/i2.jpg" alt="" class="image__string-icons">
+                                <img src="./font/slider/i2.jpg" alt="" class="image__string-icons">
                                 <!-- <div href="" class="string-but">700$</div> -->
                             </a>
                             <div href="" class="string-but string-but-color">500$</div>
                         </div>
                         <div class="grid__column-5">
                             <a href="" class="image__string">
-                                <img src="/html/font/slider/i3.jpg" alt="" class="image__string-icons">
+                                <img src="./font/slider/i3.jpg" alt="" class="image__string-icons">
                                 <!-- <div href="" class="string-but">700$</div> -->
                             </a>
                             <div href="" class="string-but">700$</div>
@@ -278,14 +278,14 @@
 
                         <div class="grid__column-5">
                             <a href="" class="image__string">
-                                <img src="/html/font/slider/i4.jpg" alt="" class="image__string-icons">
+                                <img src="./font/slider/i4.jpg" alt="" class="image__string-icons">
                                 <!-- <div href="" class="string-but">700$</div> -->
                             </a>
                             <div href="" class="string-but string-but-color">1000$</div>
                         </div>
                         <div class="grid__column-5">
                             <a href="" class="image__string">
-                                <img src="/html/font/slider/i5.jpg" alt="" class="image__string-icons">
+                                <img src="./font/slider/i5.jpg" alt="" class="image__string-icons">
                                 <!-- <div href="" class="string-but">700$</div> -->
                             </a>
                             <div class="string-but">300$</div>
@@ -358,7 +358,7 @@
                         <div class="grid__row">
                             <div class="grid__column-21">
                                 <div class="content-column-one">
-                                    <img src="/html/font/slider/anh1.jpg" alt="" class="content-column-img">
+                                    <img src="./font/slider/anh1.jpg" alt="" class="content-column-img">
                                 </div>
                             </div>
                             <div class="grid__column-21 grid__column-bd">
@@ -380,7 +380,7 @@
                             </div>
                             <div class="grid__column-21">
                                 <div class="content-column-one">
-                                    <img src="/html/font/slider/anh2.jpg" alt="" class="content-column-img">
+                                    <img src="./font/slider/anh2.jpg" alt="" class="content-column-img">
                                 </div>
                             </div>
                             <div class="grid__column-21 content-column-magic grid__column-bd">
@@ -419,7 +419,7 @@
                             </div>
                             <div class="grid__column-21">
                                 <div class="content-column-one">
-                                    <img src="/html/font/slider/anh3.jpg" alt="" class="content-column-img">
+                                    <img src="./font/slider/anh3.jpg" alt="" class="content-column-img">
                                 </div>
                             </div>
                             <div class="grid__column-21 grid__column-bd">
@@ -441,7 +441,7 @@
                             </div>
                             <div class="grid__column-21">
                                 <div class="content-column-one">
-                                    <img src="/html/font/slider/anh4.jpg" alt="" class="content-column-img">
+                                    <img src="./font/slider/anh4.jpg" alt="" class="content-column-img">
                                 </div>
                             </div>
                         </div>
@@ -638,9 +638,9 @@
         <div class="footer__before">
             <div class="box">
                 <div class="footer__before-total">
-                    <img src="/html/font/slider/img6.jpg" alt="" class="footer__before-img">
+                    <img src="./font/slider/img6.jpg" alt="" class="footer__before-img">
                     <div class="modal-foot">
-                        <img src="/html/font/slider/mo.jpg" alt="" class="footer__before-img-mo">
+                        <img src="./font/slider/mo.jpg" alt="" class="footer__before-img-mo">
                     </div>
                 </div>
                 <div class="footter__box">
@@ -649,7 +649,7 @@
                             <div class="grid__column-50">
                                 <div class="container-menu-items">
                                     <div class="menu-item-icon">
-                                        <img src="/html/font/slider/travel.png" alt="" class="container-menu-items-2">
+                                        <img src="./font/slider/travel.png" alt="" class="container-menu-items-2">
                                     </div>
                                     <div class="container-form-public">
                                         <span class="container-txts container-txts-public">
