--- a/music.html
+++ b/music.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>music</title>
-    <link rel="stylesheet" type="text/css" href="music.css">
-    <link rel="stylesheet" href="/html/font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" type="text/css" href="./music.css">
+    <link rel="stylesheet" href="./font/themify-icons/themify-icons.css">
 
 
 </head>
